# education_agent

./: .gitignore  README.md  USAGE.md  pyproject.toml  python_requirements.md  requirements-minimal.txt  requirements.txt  start.py  test_db.py
src/: __init__.py  main.py
src/api/v1/: api.py  conversations.py  students.py  teaching.py
src/core/: config.py  database.py
src/models/: __init__.py  conversation.py  learning_plan.py  student.py
src/schemas/: conversation.py  student.py  teaching.py
src/scripts/: __init__.py  init_db.py
src/services/: conversation_service.py  llm_service.py  rag_service.py  teaching_service.py
