[project]
name = "education-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "alembic==1.13.1",
    "chromadb==0.4.24",
    "fastapi==0.110.0",
    "langchain==0.1.6",
    "langchain-openai>=0.0.6",
    "psycopg2-binary==2.9.9",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.9",
    "sqlalchemy==2.0.25",
    "uvicorn==0.27.0",
]
